# Rabbit

./: README.md
Motion/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Motion/src/: App.jsx
Motion/src-tauri/: Cargo.toml  tauri.conf.json
Motion/src-tauri/icons/: icon.icns
Motion/src/components/: PomodoroTimer.jsx
